# WhisperBatch

./: .gitignore  README.md  do-work-queue.md  plan-and-pr-tracking.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_postprocess_plugins.py  setup.sh  transcribe_audio.py  transcribe_gui.py  user-questions-and-answers.md
.github/workflows/: ci.yml
docs/: async-transcription-roadmap.md  cloud-destination-integration-plan.md  postprocess-plugin-contract.md  remote-model-backend-abstraction-plan.md  speaker-segmentation-plan.md  team-shared-output-folder-mode-plan.md  transcript-diff-review-plan.md  translation-presets-integration-plan.md
scripts/: build.sh  ci_secret_scan.py  run.sh
tests/: test_async_batch.py  test_ci_secret_scan.py  test_core.py  test_diarize.py  test_postprocess_plugins.py  test_transcribe_audio.py  test_transcribe_gui_output_formats.py
whisper_batch_core/: __init__.py  async_batch.py  core.py  diarize.py  types.py
