[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-batch-core"
version = "0.1.0"
description = "Core transcription utilities for faster-whisper"
requires-python = ">=3.9"
dependencies = ["faster-whisper>=1.2.1"]

[project.scripts]
whisper-batch = "transcribe_audio:cli"

[tool.setuptools]
packages = ["whisper_batch_core"]
py-modules = ["transcribe_audio"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# GUI file uses long string literals in tkinter layout calls - idiomatic and
# impractical to wrap without hurting readability.
"transcribe_gui.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
